--- a/package.json
+++ b/package.json
@@ -11,9 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.26.1",
-    "csv-parser": "^3.0.0",
-    "i": "^0.3.7",
-    "node-fetch": "^3.2.3",
-    "npm": "^8.6.0"
+    "csv-parser": "^3.0.0"
   }
 }
