--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prettier": "prettier . --write"
   },
   "keywords": [],
   "author": "",
@@ -12,5 +12,8 @@
   "dependencies": {
     "axios": "^0.26.1",
     "csv-parser": "^3.0.0"
+  },
+  "devDependencies": {
+    "prettier": "3.0.1"
   }
 }
